fixing up styling and spacing

--- a/style/index.css
+++ b/style/index.css
@@ -15,6 +15,7 @@ body:before {
 
 .navbar {
     background-color: rgba(0, 0, 0, 0);
+    padding-top: 1.1em;
 }
 
 .flex-1 {
@@ -28,7 +29,8 @@ body:before {
 .logo {
     height: 5em;
     width: 100%;
-    margin-left: 13px;
+    padding-top: 5em;
+    margin-left: 1em;
     background: url("../images/logo.svg") no-repeat;
 }
 
